Add MassManager and move backend stuff to it.
This is a big commit, but a necessary one, as too many things were
intertwined. As a result, the code is now cleaner.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ add_executable(wxMASSManager WIN32
     GUI/MainFrame.cpp
     GUI/EvtMainFrame.h
     GUI/EvtMainFrame.cpp
+    MassManager/MassManager.h
+    MassManager/MassManager.cpp
     resource.rc)
 
 target_link_libraries(wxMASSManager PRIVATE
