Update the CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,19 @@ cmake_minimum_required(VERSION 3.5)
 
 project(wxMASSManager LANGUAGES CXX)
 
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/modules/" ${CMAKE_MODULE_PATH})
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 option(USE_CORRADE_SUBMODULE "Use Corrade from the Git submodule. If set to OFF, make sure you have Corrade 2020.06 or later installed to a path CMake can search in." ON)
 
 if(USE_CORRADE_SUBMODULE)
     set(BUILD_STATIC ON CACHE BOOL "" FORCE)
+    set(BUILD_STATIC_PIC ON CACHE BOOL "" FORCE)
+    set(BUILD_STATIC_UNIQUE_GLOBALS OFF CACHE BOOL "" FORCE)
+
     set(WITH_INTERCONNECT OFF CACHE BOOL "" FORCE)
     set(WITH_PLUGINMANAGER OFF CACHE BOOL "" FORCE)
     set(WITH_TESTSUITE OFF CACHE BOOL "" FORCE)
